do log out
